﻿$Rev$
[2007/08/28]
SvnSupport.py       Remove box.AddStretchSpacer invoke, replaced to StaticBoxSizer

[2007/08/27]
doc                 Change the plugin.txt, fixed bug and added some missing plugins description
svn_plugin CheckList.py
                    Add log history, select/deselect all, show unversioned files,
                    different color for different status, update Chinese translation
                    Add no files notify if where is no files need to process in 
                    'commit', 'revert' dialog
ShellWindow.py mRun.py
                    Improvement. Replace the popup menu, and add Copy Without Prompts 
                    menu item. And if the result cann't be convert to unicode, then
                    display the result as repr().
mLexerFactory.py    Fix that when you change the file type, the icon in directory
                    and dynamic menu don't change bug
Debug.py            Add time stamp info in debug and error file
mPyRun.py           Add doctest functionality
                    
[2007/08/26]
DirBrowser.py svn_plugin
                    Improvement. Adding icon set used to indicate svn status
                    Add saving file automatically update the svn icon status,
                    update Chinese translation
                    
mInputAssistant.py  Changing ESC to Alt+Q to cancel snip.
                    
[2007/08/25]
DirBrowser.py SvnSupport.py mRun.py
                    Add refreshing current folder functionality after the svn 
                    command finished
mSearch.py          Fix Ctrl+B bug. The position is not the right, it's less 1.
svn_plugin          Make svn support a plugin, so if you want to use svn, you
                    should enable the svn_plugin first.
                    
[2007/08/24]
Editor.py           Add Ctrl+Insret => Copy, and add Ctrl+C, Ctrl+X, Ctrl+Y to
                    Editor.py I don't if it'll fix the problem in linux