@@ -1,6 +1,8 @@
 ﻿$Rev$
 [2007/08/28]
 SvnSupport.py       Remove box.AddStretchSpacer invoke, replaced to StaticBoxSizer
+ShellDialog.py ScriptDialog.py Entry.py
+                    Fix dialog bug
 
 [2007/08/27]
 doc                 Change the plugin.txt, fixed bug and added some missing plugins description
